--- a/sections/customeheader.liquid
+++ b/sections/customeheader.liquid
@@ -260,6 +260,12 @@
             "id": "sub4",
             "label": "Select your Menu",
             "info": "Menu"
+        },
+        {
+            "type": "link_list",
+            "id": "sub5",
+            "label": "Select your Mobile Menu",
+            "info": "Menu"
         }
         ],
         "blocks": [
