--- a/assets/style.css
+++ b/assets/style.css
@@ -444,7 +444,6 @@ div#backToCollection {
   font-weight: 700;
   font-size: 16px;
   line-height: 19px;
-  margin: 24px;
   padding: 0;
   color: #000000;
 }
@@ -824,6 +823,10 @@ div#suggeationlist {
 .menu-tooglewrapper.d-lg-none {
   position: relative;
   z-index: 1000;
+}
+
+div#rec {
+  padding: 25px 0;
 }
 
 .bannar-wrapper {
