--- a/sections/product-templateextra.liquid
+++ b/sections/product-templateextra.liquid
@@ -49,12 +49,11 @@
               <div class="splide__track">
 
 
-                <ul class="splide__list" id="thumpnai-group">
+                <ul class="splide__list">
 
                   {% for image in product.images %}
                     {% comment %} {{ image.src | img_url: '' }} {% endcomment %}
-                  <li class="splide__slide imageslider-image" data-image="{{ image.src | img_url: '' }}">
-
+                  <li class="splide__slide">
                     <svg width="79" height="111" viewBox="0 0 79 111" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                       <rect x="0.5" y="0.5" width="78" height="110" rx="39" fill="url(#pattern{{forloop.index}}-a)" stroke="black"/>
                       <defs>
@@ -608,56 +607,67 @@
   main.sync( thumbnails );
   main.mount();
   thumbnails.mount();
+
+
+      var url      = window.location.href; 
+    console.log("this from me");
+    var pathname = window.location.origin + window.location.pathname + ".json";
+    console.log(pathname);
+    console.log(url); 
+const allvariant=[];
+const allvariantimage =[];
+fetch(pathname)
+  .then((response) => { return response.json(); })
+  .then( data => {
+
+    {% comment %} console.log(data.product) {% endcomment %}
+
+    let allvariantjson = data.product.variants;
+   allvariantjson.map(item => {
+    allvariant.push(item);
+    });
+    let varinatimage = data.product.images;
+   varinatimage.map(item => {
+    allvariantimage.push(item);
+    });
+         
+  
+});
+
+console.log(allvariant[1]);
+
+console.log(allvariantimage);
+{% comment %} do {
+    console.log(allvariant[i]);
+    i++;
+} while (i < allvariant.length); {% endcomment %}
+
+
+
+$("#testingbutton").click(function(){
+                    thumbnails.go(3);
+    });
+    
+    }) 
  
 
-    $("select").change(async function(){
+    $("select").change(function(){
         var url      = window.location.href; 
-    const lastSegment = url.split("=").pop();                          
-      var pathname = window.location.origin + window.location.pathname + ".json";
-      const reqcollection = await fetch(pathname);
-  const collectionitems  = await reqcollection.json();
-{% comment %} console.log(collectionitems); {% endcomment %}
-   let allvariantjson = collectionitems.product.variants;
-   let allvariantimagejson = collectionitems.product.images;
-   let imageid = 100;
+    console.log("this from me");
+    console.log(url);
+    const lastSegment = url.split("=").pop();
+    console.log(lastSegment);
 
-  const itemget =  allvariantjson.filter((item)=>{
-     if(item.id == lastSegment){
-      imageid = item.image_id;
-      return;
-     }
-  });
-  {% comment %} console.log(imageid); {% endcomment %}
+console.log('allvariant');
+console.log(allvariant);
+  
+   
+    
 
-   let imagesrc = 'html';
-
-  const itemimageget =  allvariantimagejson.filter((item)=>{
-
-     if(item.id == imageid){
-      imagesrc = item.src;
-      return;
-     }
-  });
-
-
-{% comment %} 
-  console.log( imagesrc.split("/").pop()); {% endcomment %}
-  const imagelastpart = imagesrc.split("/").pop();
-const nodeList = document.querySelectorAll('.imageslider-image')
-{% comment %} console.log(nodeList); {% endcomment %}
- 
-     for (const [index, obj] of nodeList.entries()) {
-        {% comment %} console.log(obj.getAttribute('data-image')); {% endcomment %}
-        const lastimagepart = obj.getAttribute('data-image').split("/").pop();
-        if(lastimagepart === imagelastpart ){
-        {% comment %} console.log("this item is match");
-          console.log(index + 1);  {% endcomment %}
-          thumbnails.go(index + 1);
-        }
-    } 
-{% comment %} console.log('objects'); {% endcomment %}
-
-          }) 
+    {% comment %} const proudctjson = async fetch(pathname);
+          const getalldata =   await  proudctjson.json()
+          
+  console.log(getalldata); {% endcomment %}
   });
 
 </script>
