--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -649,7 +649,7 @@ const nodeList = document.querySelectorAll('.imageslider-image')
         if(lastimagepart === imagelastpart ){
         {% comment %} console.log("this item is match");
           console.log(index + 1);  {% endcomment %}
-          thumbnails.go(index + 1);
+          thumbnails.go(index);
         }
     } 
 {% comment %} console.log('objects'); {% endcomment %}
