all theme update

--- a/snippets/homemodal.liquid
+++ b/snippets/homemodal.liquid
@@ -47,3 +47,54 @@
         </div>
     </div>
 </div>
+
+
+<script>
+{% comment %} put this on main js it will work  {% endcomment %}
+
+$(document).ready(function(){
+  
+
+var modal = document.querySelector(".cmodal");
+var trigger = document.querySelector(".trigger");
+var closeButton = document.querySelector(".close-button");
+
+function toggleModal() {
+    modal.classList.toggle("show-modal");
+ 
+}
+
+function windowOnClick(event) {
+    if (event.target === modal) {
+        toggleModal();
+       
+    }
+}
+
+
+closeButton.addEventListener("click", toggleModal);
+
+window.addEventListener("click", windowOnClick);
+
+const name = localStorage.getItem('modal');
+if(name){   }else{
+
+  window.setTimeout(function(){
+    toggleModal();
+}, 1000)
+
+ }
+ 
+
+  
+
+
+    $('.close-button').click(function(){
+      window.localStorage.setItem("modal", "true");
+  });
+
+
+
+  });
+
+</script>
