--- a/snippets/header-searchjs.liquid
+++ b/snippets/header-searchjs.liquid
@@ -56,7 +56,7 @@ const proudctlist = items.resources.results.products;
 
 const proudctwerapper = document.createElement('div')
 const proudctTitle = document.createElement('h3')
-proudctTitle.innerHTML ="Proudcts"
+proudctTitle.innerHTML ="Products"
 proudctwerapper.className = "proudct-werapper"
 suggestionList.innerHTML = ''
 proudctwerapper.append( proudctTitle )
