product page page sami view

--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -108,8 +108,8 @@
        <div class="contact-left-content">
           <div class="singel-content">
              <h3>{{ section.settings.h3 }}</h3>
-             <p> Email : {{ section.settings.email }}</p>
-             <p> Phone : {{ section.settings.phone }}</p>
+             <p> <a href="{{ section.settings.email }}"> Email : {{ section.settings.email }} </a></p>
+             <p>  <a href="{{ section.settings.phone }}"> Phone : {{ section.settings.phone }}  </a></p>
           </div>
           <div class="singel-content">
              <h3>{{ section.settings.h32 }}</h3>
